--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,17 @@
 {
-    "java.debug.settings.onBuildFailureProceed": true
+    "java.debug.settings.onBuildFailureProceed": true,
+    "java.project.sourcePaths": [
+        ".",
+        "Pertemuan13"
+    ],
+    "java.project.referencedLibraries": [
+        "c:\\javafx-sdk-21\\lib\\javafx.swing.jar",
+        "c:\\javafx-sdk-21\\lib\\javafx.graphics.jar",
+        "c:\\javafx-sdk-21\\lib\\javafx.base.jar",
+        "c:\\javafx-sdk-21\\lib\\javafx.web.jar",
+        "c:\\javafx-sdk-21\\lib\\javafx.media.jar",
+        "c:\\javafx-sdk-21\\lib\\javafx.controls.jar",
+        "c:\\javafx-sdk-21\\lib\\javafx.fxml.jar",
+        "c:\\javafx-sdk-21\\lib\\javafx-swt.jar"
+    ]
 }
